--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,16 @@ name = "spb-base"
 version = "0.1.0"
 description = ""
 authors = ["Andrii <tap.press.swap@gmail.com>"]
+packages = [
+    { include = "spb_base", from = "src" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
 pydantic-settings = "^2.2.1"
 fastapi = {extras = ["all"], version = "^0.110.1"}
 beanie = "^1.25.0"
+pytest = "^8.1.1"
 
 
 [build-system]
