--- a/docker/testrunner/Dockerfile
+++ b/docker/testrunner/Dockerfile
@@ -6,10 +6,10 @@ RUN pip install poetry
 
 COPY pyproject.toml poetry.lock* /spb_base/
 
-COPY .env ./
+COPY .env pytest.ini ./
 COPY src src
+COPY tests tests
 
 RUN poetry install --no-interaction --no-ansi
 
-
-CMD ["poetry", "run", "uvicorn", "spb_base.main:create_app", "--factory", "--reload", "--host", "0.0.0.0", "--port", "8081"]
+CMD ["poetry", "run", "pytest", "tests"]
