--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,26 @@ services:
       timeout: 2s
       retries: 5
       start_period: 4s
+    command:
+      - '--logpath'
+      - '/var/log/mongodb/mongod.log'
+
+  testrunner:
+    container_name: spb_base.testrunner
+    profiles:
+      - test
+    build:
+      context: .
+      dockerfile: docker/testrunner/Dockerfile
+    volumes:
+      - ./src:/spb_base/src
+      - ./tests:/spb_base/tests
+    env_file:
+      - .env
+    depends_on:
+      mongo:
+        condition: service_healthy
+
 
 #  mongo-express:
 #    container_name: spb_base.mongo-express
@@ -41,3 +61,4 @@ services:
 
 volumes:
   spb_base.mongodata: { }
+  spb_base.test_mongodata: { }
