--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pydantic-settings = "^2.2.1"
 fastapi = {extras = ["all"], version = "^0.110.1"}
 beanie = "^1.25.0"
 pytest = "^8.1.1"
+httpx = "^0.27.0"
+pytest-asyncio = "^0.23.6"
 
 
 [build-system]
