adjust testing environments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,20 +44,27 @@ services:
       - ./src:/spb_base/src
       - ./tests:/spb_base/tests
     env_file:
-      - .env
+      - test.env
     depends_on:
-      mongo:
+      test_mongo:
         condition: service_healthy
 
-
-#  mongo-express:
-#    container_name: spb_base.mongo-express
-#    image: mongo-express
-#    ports:
-#      - "8081:8081"
-#    depends_on:
-#      mongo:
-#        condition: service_healthy
+  test_mongo:
+    container_name: spb_base.test_mongo
+    image: mongo
+    ports:
+      - "27018:27017"
+    volumes:
+      - spb_base.test_mongodata:/data/db
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      interval: 3s
+      timeout: 2s
+      retries: 5
+      start_period: 4s
+    command:
+      - '--logpath'
+      - '/var/log/mongodb/mongod.log'
 
 volumes:
   spb_base.mongodata: { }
