--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ beanie = "^1.25.0"
 pytest = "^8.1.1"
 httpx = "^0.27.0"
 pytest-asyncio = "^0.23.6"
+pytest-mock = "^3.14.0"
+asgi-lifespan = "^2.1.0"
 
 
 [build-system]
